--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@types/axios": "^0.9.36",
+    "@types/recoil": "^0.0.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eventsource": "^3.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
