--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2025-01-22"
 
 # compatibility_flags = [ "nodejs_compat" ]
 
-# [vars]
+[vars]
 # MY_VAR = "my-variable"
 
 # [[kv_namespaces]]
